fixed responsive land

--- a/public/index.html
+++ b/public/index.html
@@ -111,13 +111,17 @@
         <div class="slider-block">
             <div class="slider-block_wrapper">
                 <div class="slider single-item">
+
                     <div>
+                        <div class="slider__img_wrapper"></div>
                         <img src="./img/items_slider.png" alt="slider's image">
                     </div>
                     <div>
+                        <div class="slider__img_wrapper"></div>
                         <img src="./img/items_slider_1.png" alt="slider's image">
                     </div>
                     <div>
+                        <div class="slider__img_wrapper"></div>
                         <img src="./img/items_slider_2.png" alt="slider's image">
                     </div>
                 </div>
