--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <div class="wrapper">
             <div>
                 <div class="header">
-                    <img class="logo" src="./img/Logo.svg" alt="logo">
+                    <img class="logo" src="./img/logo.svg" alt="logo">
                     <nav>
                         <button class="navbar-toggler" type="button" data-target="#navigationDropdown">
                             <span class="navbar-toggler-icon"></span>
